--- a/index.html
+++ b/index.html
@@ -177,16 +177,27 @@
 
       <!-- center: reflection only -->
       <div class="footer-actions">
-        <a href="reflection.html" class="footer-reflection-link">Reflection</a>
+        <a href="reflection/reflection.html" class="footer-reflection-link">Reflection</a>
       </div>
 
-      <!-- right: icons -->
+      <!-- right: social icons -->
       <div class="footer-icons">
-        <!-- Replace # with your real profile links -->
-        <a href="#" class="icon-button github" aria-label="GitHub profile">
+        <a
+          href="https://github.com/p3ytonk"
+          class="icon-button github"
+          aria-label="GitHub profile for Peyton Knox"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <img src="images/Github.png" alt="" aria-hidden="true">
         </a>
-        <a href="#" class="icon-button linkedin" aria-label="LinkedIn profile">
+        <a
+          href="https://www.linkedin.com/in/peyton-knox-49a67729a/"
+          class="icon-button linkedin"
+          aria-label="LinkedIn profile for Peyton Knox"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <img src="images/Linkedin.png" alt="" aria-hidden="true">
         </a>
       </div>
