--- a/reflection/reflection.html
+++ b/reflection/reflection.html
@@ -9,16 +9,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600;700&family=Dawning+of+a+New+Day&display=swap" rel="stylesheet">
 
-  <!-- Favicon -->
- <link rel="icon" type="image/png" href="my-favicon/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="my-favicon/favicon.svg" />
-<link rel="shortcut icon" href="my-favicon/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="my-favicon/apple-touch-icon.png" />
-<meta name="apple-mobile-web-app-title" content="MyWebSite" />
-<link rel="manifest" href="my-favicon/site.webmanifest" />
+  <!-- Favicon (go UP one level to my-favicon folder) -->
+  <link rel="icon" type="image/png" href="../my-favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="../my-favicon/favicon.svg" />
+  <link rel="shortcut icon" href="../my-favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../my-favicon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+  <link rel="manifest" href="../my-favicon/site.webmanifest" />
 
-
-  <link rel="stylesheet" href="css/stylesheet.css">
+  <!-- CSS (go UP one level to css folder) -->
+  <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 <body class="reflection-body">
   <header class="reflection-header">
@@ -38,14 +38,15 @@
     <section class="reflection-section" id="pit">
       <h2>The Pit</h2>
       <p>
-     The hardest assignment for me personally this quarter was the interactive field guide. This is when we were introduced to media queries for the first time and I have to admit this has been a continuous learning curve for me still to this day. Designing for desktop is pretty easy to me but transferring that to mobile is where I find things to become more tricky. I got sick the week we first started learning about mobile design, so maybe that had something to do with my misunderstanding in that area. I am satisfied with what I made for the desktop field guide, but looking at the mobile version, I was kind of horrified at how poorly it turned out.
+        The hardest assignment for me personally this quarter was the interactive field guide. This is when we were introduced to media queries for the first time and I have to admit this has been a continuous learning curve for me still to this day. Designing for desktop is pretty easy to me but transferring that to mobile is where I find things to become more tricky. I got sick the week we first started learning about mobile design, so maybe that had something to do with my misunderstanding in that area. I am satisfied with what I made for the desktop field guide, but looking at the mobile version, I was kind of horrified at how poorly it turned out.
       </p>
     </section>
 
     <section class="reflection-section" id="pivot">
       <h2>The Pivot</h2>
       <p>
-Looking back at my original “Moodz and Vibes” board, I wasn’t extremely fond of the overall theme going on there, but I did know that it is very “me” so I decided to stick with it for this Portfolio Project. One thing I did differently was use a clean white canvas as the background instead of that dark chocolate brown. One, I just made a design similar to that for the Product Landing Page, but two I really wanted to let the color palette shine instead of having those colors compete with the rich dark background. Changing up the fonts too ended up shifting my overall idea of what I was going for thematically for this project. I really wanted this page to feel very much like an old style art book that I used to look at when I was younger.       </p>
+        Looking back at my original “Moodz and Vibes” board, I wasn’t extremely fond of the overall theme going on there, but I did know that it is very “me” so I decided to stick with it for this Portfolio Project. One thing I did differently was use a clean white canvas as the background instead of that dark chocolate brown. One, I just made a design similar to that for the Product Landing Page, but two I really wanted to let the color palette shine instead of having those colors compete with the rich dark background. Changing up the fonts too ended up shifting my overall idea of what I was going for thematically for this project. I really wanted this page to feel very much like an old style art book that I used to look at when I was younger.
+      </p>
     </section>
 
     <section class="reflection-section" id="process">
@@ -67,7 +68,8 @@ Looking back at my original “Moodz and Vibes” board, I wasn’t extremely fo
   <footer class="site-footer reflection-footer">
     <div class="reflection-footer-inner">
       <p class="footer-copy">© 2025 Peyton Knox | Portfolio</p>
-      <a href="index.html" class="reflection-back-link">Back to Portfolio</a>
+      <!-- IMPORTANT: go UP one level to index.html -->
+      <a href="../index.html" class="reflection-back-link">Back to Portfolio</a>
     </div>
   </footer>
 </body>
