--- a/reflection/reflection.html
+++ b/reflection/reflection.html
@@ -69,7 +69,7 @@
     <div class="reflection-footer-inner">
       <p class="footer-copy">© 2025 Peyton Knox | Portfolio</p>
       <!-- IMPORTANT: go UP one level to index.html -->
-      <a href="../index.html" class="reflection-back-link">Back to Portfolio</a>
+      <a href="index.html" class="reflection-back-link">Back to Portfolio</a>
     </div>
   </footer>
 </body>
