--- a/reflection/reflection.html
+++ b/reflection/reflection.html
@@ -9,12 +9,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600;700&family=Dawning+of+a+New+Day&display=swap" rel="stylesheet">
 
+
   <link rel="icon" type="image/png" href="../my-favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="../my-favicon/favicon.svg" />
   <link rel="shortcut icon" href="../my-favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="../my-favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="MyWebSite" />
   <link rel="manifest" href="../my-favicon/site.webmanifest" />
+
 
   <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
@@ -66,6 +68,8 @@
   <footer class="site-footer reflection-footer">
     <div class="reflection-footer-inner">
       <p class="footer-copy">© 2025 Peyton Knox | Portfolio</p>
+    
+      <a href="index.html" class="reflection-back-link">Back to Portfolio</a>
     </div>
   </footer>
 </body>
