--- a/reflection/reflection.html
+++ b/reflection/reflection.html
@@ -18,7 +18,7 @@
   <link rel="manifest" href="../my-favicon/site.webmanifest" />
 
 
-  <link rel="stylesheet" href="../css/stylesheet.css">
+  <link rel="stylesheet" href="/reflection/css/stylesheet.css">
 </head>
 <body class="reflection-body">
   <header class="reflection-header">
