--- a/reflection/reflection.html
+++ b/reflection/reflection.html
@@ -5,61 +5,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reflection | Peyton Knox</title>
 
+  <!-- Google Fonts (same as portfolio) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600;700&family=Dawning+of+a+New+Day&display=swap" rel="stylesheet">
 
 
-  <link rel="icon" type="image/png" href="../my-favicon/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="../my-favicon/favicon.svg" />
-  <link rel="shortcut icon" href="../my-favicon/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="../my-favicon/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
-  <link rel="manifest" href="../my-favicon/site.webmanifest" />
-
-
-  <link rel="stylesheet" href="/reflection/css/stylesheet.css">
+  <!-- IMPORTANT: same CSS path as index.html -->
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="reflection-body">
+  <!-- ===== GREEN HEADER STRIP ===== -->
   <header class="reflection-header">
     <div class="reflection-header-inner">
       <h1>Reflection</h1>
     </div>
   </header>
 
+  <!-- ===== MAIN REFLECTION CONTENT ===== -->
   <main class="reflection-main">
     <section class="reflection-section" id="threshold">
       <h2>The Threshold</h2>
       <p>
-        My honest answer to this question is that I am not certain I have had a moment where things have sort of clicked for me. I have a base level understanding of how to get where I want to go and how to troubleshoot things, but I need frequent assistance from Google and ChatGPT when I am not sure how to code something I want to create. I still have a lot of uncertainty about coding and I get confused frequently when navigating through assignments and projects. Although things haven’t fully clicked for me, I do feel as though the dots are connecting and that with a bit more time, practice, and hard work, my brain will eventually have a more well-rounded understanding of code. 
+        <!-- Threshold paragraph here -->
       </p>
     </section>
 
     <section class="reflection-section" id="pit">
       <h2>The Pit</h2>
       <p>
-        The hardest assignment for me personally this quarter was the interactive field guide. This is when we were introduced to media queries for the first time and I have to admit this has been a continuous learning curve for me still to this day. Designing for desktop is pretty easy to me but transferring that to mobile is where I find things to become more tricky. I got sick the week we first started learning about mobile design, so maybe that had something to do with my misunderstanding in that area. I am satisfied with what I made for the desktop field guide, but looking at the mobile version, I was kind of horrified at how poorly it turned out.
+        <!-- Pit paragraph here -->
       </p>
     </section>
 
     <section class="reflection-section" id="pivot">
       <h2>The Pivot</h2>
       <p>
-        Looking back at my original “Moodz and Vibes” board, I wasn’t extremely fond of the overall theme going on there, but I did know that it is very “me” so I decided to stick with it for this Portfolio Project. One thing I did differently was use a clean white canvas as the background instead of that dark chocolate brown. One, I just made a design similar to that for the Product Landing Page, but two I really wanted to let the color palette shine instead of having those colors compete with the rich dark background. Changing up the fonts too ended up shifting my overall idea of what I was going for thematically for this project. I really wanted this page to feel very much like an old style art book that I used to look at when I was younger.
+        <!-- Pivot paragraph here -->
       </p>
     </section>
 
     <section class="reflection-section" id="process">
       <h2>The Process</h2>
       <p>
-        The change I would absolutely make about the way I approached this course, is asking for more help from my instructor. I am one of those people who believes they can just figure it out themselves instead of asking for assistance, and to be honest it’s kind of something I dread. I hate to be a bother and I have a fear of asking a “silly” question. I definitely reached out when I had important questions and I was communicative in the classroom as well, but I think I could have given myself more of a boost if I would have even just asked for some direction or advice. Although I feel proud of what I have learned and accomplished in this first code + design class, I know that I could have excelled and been more creative had I just put myself out there a bit more. That is something that I am constantly trying to work on. 
+        <!-- Process paragraph here -->
       </p>
     </section>
 
     <section class="reflection-section" id="future">
       <h2>The Future</h2>
       <p>
-        I see the skillset of Code + Design impacting my future substantially. I never thought I would be able to go out and build a website on my own, and now that I something I know I could figure out and accomplish. Taking this class and learning this skill has given me a major confidence boost in terms of what I am able to do. It has completely made me question what I want to do when I leave college and I can’t even believe I am saying this, but maybe I want to be in web design! Taking this class has shifted my perspective of not only the web, but also design as a whole. 
+        <!-- Future paragraph here -->
       </p>
     </section>
   </main>
@@ -68,8 +64,7 @@
   <footer class="site-footer reflection-footer">
     <div class="reflection-footer-inner">
       <p class="footer-copy">© 2025 Peyton Knox | Portfolio</p>
-    
-      <a href="index.html" class="reflection-back-link">Back to Portfolio</a>
+      <a href="index.html" class="reflection-back-link">BACK TO PORTFOLIO</a>
     </div>
   </footer>
 </body>
